# Nebula-DApp-Platform

./: .gitignore  README.md
DappABI/magicPixels/: MigicPixels.abi  MigicPixels.wast
magic_pixels/: CMakeLists.txt  magic_pixel_plugin.cpp
magic_pixels/include/eosio/magic_pixel_plugin/: magic_pixel_plugin.hpp  protocol.hpp
meetworld/: .travis.yml  README.MD  package-lock.json  package.json  vue.config.js
meetworld/public/: index.html
meetworld/src/: App.vue  Global.js  global.scss  main.js  router.js  z-test.js
meetworld/src/api/: api.js  request.js
meetworld/src/components/: Globe.vue  SponsorPaymentModal.vue  toComplete.vue
meetworld/src/components/landmark/: LocationPopup.vue  myPortal.vue
meetworld/src/components/loginRegister/: codeLogin.vue  findPass.vue  passLogin.vue  register.vue
meetworld/src/components/toast/: toast.js  toast.vue
meetworld/src/config/: modules.js  network.js
meetworld/src/i18n/: about_en.html  about_jp.html  about_ko.html  about_ru.html  about_zh.html  about_zh_tw.html  en.js  jp.js  ko.js  ru.js  zh.js  zh_tw.js
meetworld/src/store/: index.js
meetworld/src/util/: api.js  countryPoints.json  land.js  utils.js
meetworld/src/util/apis/: eos.js  index.js
meetworld/src/views/: About.vue  GlobeView.vue  MapView.vue  Token.vue  location.js  loginRegister.vue
